<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginTop="20dp"
        android:text="@string/Delicious"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/search_bar"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:background="@drawable/search_bar_background"
        android:hint="@string/search"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="#000000"
        android:textColorHint="#888888" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="10dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="30dp"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/main_food_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/food_content1"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="20dp"
                android:elevation="2dp"
                android:outlineProvider="bounds"
                android:shadowColor="#000000"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="@string/dac_san"
                android:textAllCaps="true"
                android:textColor="#FFFFFFFF"
                android:textSize="20sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>
    </FrameLayout>

    <GridView
        android:id="@+id/grid_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:horizontalSpacing="10dp"
        android:numColumns="2"
        android:padding="10dp"
        android:verticalSpacing="10dp" />

</LinearLayout>