<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:layout_marginTop="20dp"
            android:text="@string/Delicious"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="300dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="30dp"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/food_price1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/food_price1"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginBottom="20dp"
                    android:elevation="2dp"
                    android:outlineProvider="bounds"
                    android:shadowColor="#000000"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="2"
                    android:text="@string/Vegetable"
                    android:textAllCaps="true"
                    android:textColor="#FFFFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="300dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="30dp"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/food_price2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/food_price2"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginBottom="20dp"
                    android:elevation="2dp"
                    android:outlineProvider="bounds"
                    android:shadowColor="#000000"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="2"
                    android:text="@string/Fish"
                    android:textAllCaps="true"
                    android:textColor="#FFFFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="300dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                app:cardBackgroundColor="#FFFFFF"
                app:cardCornerRadius="30dp"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/food_price3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/delicious"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    android:layout_marginBottom="20dp"
                    android:elevation="2dp"
                    android:outlineProvider="bounds"
                    android:shadowColor="#000000"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="2"
                    android:text="@string/Agricultural"
                    android:textAllCaps="true"
                    android:textColor="#FFFFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </androidx.cardview.widget.CardView>
        </FrameLayout>

    </LinearLayout>

</ScrollView>