<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/my_image_view"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:background="@drawable/solid_color_orange"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:text="@string/Delicious"
                android:textColor="#FFFFFFFF"
                android:textSize="20sp"
                android:textStyle="bold|italic" />

            <TextView
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="60dp"
                android:text="@string/happy"
                android:textColor="#FFFFFFFF"
                android:textSize="30sp"
                android:textStyle="bold|italic" />

            <ImageView
                android:id="@+id/hamburger_white"
                android:layout_width="20dp"
                android:layout_height="30dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/hamburger_white" />


            <EditText
                android:id="@+id/search_bar"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="120dp"
                android:autofillHints=""
                android:background="@drawable/search_bar_background"
                android:hint="@string/search"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="#000000"
                android:textColorHint="#888888" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="200dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="20dp"
                    app:cardBackgroundColor="#FFFFFF"
                    app:cardCornerRadius="30dp"
                    app:cardElevation="0dp">

                    <ImageView
                        android:id="@+id/delicious"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/delicious"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center"
                        android:layout_marginBottom="20dp"
                        android:elevation="2dp"
                        android:outlineProvider="bounds"
                        android:shadowColor="#000000"
                        android:shadowDx="1"
                        android:shadowDy="1"
                        android:shadowRadius="2"
                        android:text="@string/Delicious"
                        android:textAllCaps="true"
                        android:textColor="#FFFFFFFF"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>
            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="500dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="20dp"
                    app:cardBackgroundColor="#FFFFFF"
                    app:cardCornerRadius="30dp"
                    app:cardElevation="0dp">

                    <ImageView
                        android:id="@+id/cooking"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:adjustViewBounds="true"
                        android:scaleType="centerCrop"
                        android:src="@drawable/cooking"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|center"
                        android:layout_marginBottom="20dp"
                        android:elevation="2dp"
                        android:outlineProvider="bounds"
                        android:shadowColor="#000000"
                        android:shadowDx="1"
                        android:shadowDy="1"
                        android:shadowRadius="2"
                        android:text="@string/cooking"
                        android:textAllCaps="true"
                        android:textColor="#FFFFFFFF"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>
            </FrameLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="800dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_marginEnd="16dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/fav_food1"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_marginEnd="16dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/fav_food2"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_marginEnd="16dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/fav_food3"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/fav_food4"
                        tools:ignore="ContentDescription" />

                </LinearLayout>
            </HorizontalScrollView>

        </RelativeLayout>


    </ScrollView>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/drawer_menu" />

</androidx.drawerlayout.widget.DrawerLayout>
